--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="brand">YourName</div>
+            <div class="brand">Prabhat</div>
             <ul class="nav-links">
                 <li><a href="#home" class="nav-link active">Home</a></li>
                 <li><a href="#links" class="nav-link">Links</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#about" class="nav-link">projects</a></li>
+                <li><a href="#contact" class="nav-link">Live Preview</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="#contact" class="nav-link">About</a></li>
             </ul>
             <div class="theme-toggle">
                 <i class="fas fa-moon"></i>
@@ -35,8 +37,8 @@
         <section id="home" class="section active">
             <div class="container">
                 <div class="profile">
-                    <img src="https://via.placeholder.com/200" alt="Profile Picture" class="profile-pic">
-                    <h1>Your Name</h1>
+                    <img src="Profile.png" alt="Profile Picture" class="profile-pic">
+                    <h1>Prabhat Rai</h1>
                     <p class="bio">Digital Creator | Content Specialist | Sharing My Journey</p>
                     <div class="scroll-down">
                         <span>Explore More</span>
