--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/main.css" />
+    <!-- For favicon.ico -->
+    <link rel="icon" href="images/favicon.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -284,7 +286,6 @@
             <div class="value-proposition">
               <h3><i class="fas fa-star"></i> What I Offer</h3>
               <div class="value-items">
-                
                 <!-- Affordable Advantage Column -->
                 <div class="value-item">
                   <div class="value-icon">
@@ -422,16 +423,17 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
-            <p class="copyright">
-                &copy; 2024 - <span id="year"></span>, www.prabhat.info.np, All rights reserved.
-            </p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <span class="footer-separator">|</span>
-                <a href="#">Terms of Service</a>
-                <span class="footer-separator">|</span>
-                <a href="#">Sitemap</a>
-            </div>
+          <p class="copyright">
+            &copy; 2024 - <span id="year"></span>, www.prabhat.info.np, All
+            rights reserved.
+          </p>
+          <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <span class="footer-separator">|</span>
+            <a href="#">Terms of Service</a>
+            <span class="footer-separator">|</span>
+            <a href="#">Sitemap</a>
+          </div>
         </div>
       </div>
     </footer>
