--- a/index.html
+++ b/index.html
@@ -426,11 +426,11 @@
             &copy; 2024 - <span id="year"></span>, www.prabhat.info.np, All
             rights reserved.
           </p>
-          <div class="footer-links">
+          <p class="footer-links">
             <a href="#">Privacy Policy</a>
             <span class="footer-separator">|</span>
             <a href="#">Terms of Service</a>
-          </div>
+          </p>
         </div>
       </div>
     </footer>
