--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Prabhat Rai | Website Designer</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <!-- For favicon.ico -->
-    <link rel="icon" href="images/favicon.png" type="image/png" />
+    <link rel="icon" href="images/favicon.png" type="image/png"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/main.css" />
+      rel="stylesheet"/>
+    <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
     <!-- Navigation -->
@@ -55,29 +53,25 @@
               </p>
 
               <div class="social-icons">
-                <a
-                  href="https://github.com/raipravat"
+                <a href="https://github.com/raipravat"
                   class="social-icon"
                   target="_blank"
                   aria-label="GitHub"
-                  ><i class="fab fa-github"></i
-                ></a>
-                <a
-                  href="https://x.com/mr.raipravat"
+                  ><i class="fab fa-github"></i>
+                </a>
+                <a href="https://x.com/mr.raipravat"
                   class="social-icon"
                   target="_blank"
                   aria-label="Twitter"
-                  ><i class="fab fa-twitter"></i
-                ></a>
-                <a
-                  href="https://t.me/raipravat101"
+                  ><i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://t.me/raipravat101"
                   class="social-icon"
                   target="_blank"
                   aria-label="Telegram"
                   ><i class="fab fa-telegram"></i
                 ></a>
-                <a
-                  href="https://linkedin.com/in/raipravat101/"
+                <a href="https://linkedin.com/in/raipravat101/"
                   class="social-icon"
                   target="_blank"
                   aria-label="LinkedIn"
@@ -95,8 +89,7 @@
                   src="images/Profile.png"
                   alt="Prabhat Rai"
                   class="profile-pic"
-                  loading="lazy"
-                />
+                  loading="lazy"/>
               </div>
             </div>
           </div>
@@ -113,8 +106,7 @@
                 <img
                   src="images/Santa.png"
                   alt="Agency Website"
-                  loading="lazy"
-                />
+                  loading="lazy"/>
               </div>
               <div class="project-content">
                 <h3>Agency Website</h3>
@@ -124,12 +116,10 @@
                 <div class="project-tech">
                   <span>Google Sites (Lifetime Live Site)</span>
                 </div>
-                <a
-                  href="https://sites.google.com/view/prabhat-agencies/home"
+                <a href="https://sites.google.com/view/prabhat-agencies/home"
                   class="project-link"
                   target="_blank"
-                  >View Project</a
-                >
+                  >View Project</a>
               </div>
             </div>
             <div class="project-card">
@@ -137,8 +127,7 @@
                 <img
                   src="images/pravat.PNG"
                   alt="Portfolio Website"
-                  loading="lazy"
-                />
+                  loading="lazy"/>
               </div>
               <div class="project-content">
                 <h3>Portfolio Website</h3>
@@ -155,8 +144,7 @@
                   href="https://www.prabhat.info.np"
                   class="project-link"
                   target="_blank"
-                  >View Project</a
-                >
+                  >View Project</a>
               </div>
             </div>
             <div class="project-card">
@@ -164,8 +152,7 @@
                 <img
                   src="images/Som.PNG"
                   alt="Corporative Website"
-                  loading="lazy"
-                />
+                  loading="lazy"/>
               </div>
               <div class="project-content">
                 <h3>Corporative Website</h3>
@@ -177,12 +164,10 @@
                   <span>Elementor</span>
                   <span>CSS</span>
                 </div>
-                <a
-                  href="https://www.someshwarudrakshya.coop.np"
+                <a href="https://www.someshwarudrakshya.coop.np"
                   class="project-link"
                   target="_blank"
-                  >View Project</a
-                >
+                  >View Project</a>
               </div>
             </div>
           </div>
@@ -329,10 +314,6 @@
                       </li>
                       <li>
                         <i class="fab fa-wordpress"></i> WordPress (WPCrafter)
-                      </li>
-                      <li>
-                        <i class="fas fa-mobile-alt"></i> Responsive Design
-                        (Kevin Powell)
                       </li>
                     </ul>
                   </div>
