--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   aria-label="GitHub"
                   ><i class="fab fa-github"></i>
                 </a>
-                <a href="https://x.com/mr.raipravat"
+                <a href="https://x.com/mr_raipravat"
                   class="social-icon"
                   target="_blank"
                   aria-label="Twitter"
@@ -80,7 +80,7 @@
                   aria-label="WhatsApp"
                   ><i class="fab fa-whatsapp"></i
                 ></a>
-                <a href="https://discord.com/users/your-discord-id"
+                <a href="https://discord.com/users/raipravat101"
                   class="social-icon"
                   target="_blank"
                   aria-label="Discord"
@@ -343,9 +343,9 @@
                 <i class="fas fa-quote-left quote-icon"></i>
                 <p class="testimonial-text">Prabhat designed a beautiful website for my small business that exceeded all my expectations. His attention to detail and quick turnaround time were impressive.</p>
                 <div class="testimonial-author">
-                  <img src="https://randomuser.me/api/portraits/women/43.jpg" alt="Sarah Johnson" class="author-img">
+                  <img src="https://randomuser.me/api/portraits/women/43.jpg" alt="Smriti Karki" class="author-img">
                   <div class="author-info">
-                    <h4>Sarah Johnson</h4>
+                    <h4>Smriti Karki</h4>
                     <p>Small Business Owner</p>
                   </div>
                 </div>
@@ -357,10 +357,10 @@
                 <i class="fas fa-quote-left quote-icon"></i>
                 <p class="testimonial-text">Working with Prabhat was a pleasure. He understood my vision and created a website that perfectly represents my brand. Highly recommended!</p>
                 <div class="testimonial-author">
-                  <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Michael Chen" class="author-img">
+                  <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Rajen Rai" class="author-img">
                   <div class="author-info">
-                    <h4>Michael Chen</h4>
-                    <p>Freelance Photographer</p>
+                    <h4>Rajen Rai</h4>
+                    <p>YouTuber & Blogger</p>
                   </div>
                 </div>
               </div>
@@ -410,7 +410,7 @@
                   ><i class="fab fa-telegram"></i
                 ></a>
                 <a
-                  href="https://x.com/mr.raipravat"
+                  href="https://x.com/mr_raipravat"
                   class="social-icon"
                   target="_blank"
                   ><i class="fab fa-twitter"></i
@@ -433,7 +433,7 @@
                   aria-label="WhatsApp"
                   ><i class="fab fa-whatsapp"></i
                 ></a>
-                <a href="https://discord.com/users/your-discord-id"
+                <a href="https://discord.com/users/raipravat101"
                   class="social-icon"
                   target="_blank"
                   aria-label="Discord"
