--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="project-tech">
                   <span>Google Sites (Lifetime Live Site)</span>
                 </div>
-                <a href="https://sites.google.com/view/prabhat-agencies/home"
+                <a href="https://raipravat.github.io/Santa-Agency"
                   class="project-link"
                   target="_blank"
                   >View Project</a>
@@ -134,7 +134,7 @@
             <div class="project-card fade-in delay-2">
               <div class="project-image">
                 <img
-                  src="images/pravat.PNG"
+                  src="images/Rajen.PNG"
                   alt="Portfolio Website"
                   loading="lazy"/>
               </div>
@@ -150,7 +150,7 @@
                   <span>JavaScript</span>
                 </div>
                 <a
-                  href="https://www.prabhat.info.np"
+                  href="https://raipravat.github.io/Rajen-Rai"
                   class="project-link"
                   target="_blank"
                   >View Project</a>
@@ -228,7 +228,7 @@
         </div>
       </section>
 
-      <!-- CV Section -->
+      <!-- Journey Section -->
       <section id="Journey" class="section">
         <div class="container">
           <h2 class="section-title fade-in">My Self-Taught Journey</h2>
