--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="theme-toggle">
           <i class="fas fa-moon"></i>
         </div>
-        <button class="mobile-menu-toggle">
+        <button class="mobile-menu-toggle" aria-label="Open mobile menu">
           <i class="fas fa-bars"></i>
         </button>
       </div>
@@ -61,6 +61,7 @@
                   href="https://github.com/raipravat"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
                   aria-label="GitHub"
                   ><i class="fab fa-github"></i>
                 </a>
@@ -68,6 +69,7 @@
                   href="https://x.com/mr_raipravat"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
                   aria-label="Twitter"
                   ><i class="fab fa-twitter"></i>
                 </a>
@@ -75,6 +77,7 @@
                   href="https://t.me/raipravat101"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
                   aria-label="Telegram"
                   ><i class="fab fa-telegram"></i
                 ></a>
@@ -82,6 +85,7 @@
                   href="https://linkedin.com/in/raipravat101/"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
                   aria-label="LinkedIn"
                   ><i class="fab fa-linkedin"></i
                 ></a>
@@ -89,6 +93,7 @@
                   href="https://wa.me/9779842485969"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
                   aria-label="WhatsApp"
                   ><i class="fab fa-whatsapp"></i
                 ></a>
@@ -96,6 +101,7 @@
                   href="https://discord.com/users/raipravat101"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
                   aria-label="Discord"
                   ><i class="fab fa-discord"></i
                 ></a>
@@ -125,16 +131,13 @@
           <h2 class="section-title fade-in">My Projects</h2>
           <div
             class="projects-grid"
-            style="
-              display: grid;
-              grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-              gap: 2rem;
-            "
           >
+          
+          <!-- Project Cards 1-->
             <div class="project-card fade-in delay-1">
               <div class="project-image">
                 <img
-                  src="images/Santa.png"
+                  src="images/Santa.webp"
                   alt="Agency Website"
                   loading="lazy"
                 />
@@ -148,15 +151,18 @@
                 <a
                   href="https://raipravat.github.io/Santa-Agency"
                   class="project-link"
+                  rel="noopener"
                   target="_blank"
                   >View Project</a
                 >
               </div>
             </div>
+
+            <!-- Project Cards 2-->
             <div class="project-card fade-in delay-2">
               <div class="project-image">
                 <img
-                  src="images/Rajen.PNG"
+                  src="images/Rajen.webp"
                   alt="Portfolio Website"
                   loading="lazy"
                 />
@@ -176,14 +182,17 @@
                   href="https://raipravat.github.io/Rajen-Rai"
                   class="project-link"
                   target="_blank"
+                  rel="noopener"
                   >View Project</a
                 >
               </div>
             </div>
+
+            <!-- Project Cards 3-->
             <div class="project-card fade-in delay-3">
               <div class="project-image">
                 <img
-                  src="images/Som.PNG"
+                  src="images/Someshwar.webp"
                   alt="Corporative Website"
                   loading="lazy"
                 />
@@ -191,7 +200,7 @@
               <div class="project-content">
                 <h3>Corporative Website</h3>
                 <p>
-                  Corporate website with services, about, and contact sections
+                  Corporate website with services, about and contact sections
                 </p>
                 <div class="project-tech">
                   <span>WordPress</span>
@@ -202,15 +211,18 @@
                   href="https://www.someshwarudrakshya.coop.np"
                   class="project-link"
                   target="_blank"
+                  rel="noopener"
                   >View Project</a
                 >
               </div>
             </div>
+
+            <!-- Project Cards 4-->
             <div class="project-card fade-in delay-4">
               <div class="project-image">
                 <div class="project-image">
                   <img
-                    src="images/bzya.PNG"
+                    src="images/bzya.webp"
                     alt="Corporative Website"
                     loading="lazy"
                   />
@@ -219,7 +231,7 @@
                 <div class="project-content">
                 <h3>Portfolio Website</h3>
                 <p>
-                  Clean, modern, and user-friendly portfolio site—perfect for
+                  Clean, modern and user-friendly portfolio site—perfect for
                   showcasing creative work.
                 </p>
                 <div class="project-tech">
@@ -231,6 +243,38 @@
                   href="https://raipravat.github.io/Bzya"
                   class="project-link"
                   target="_blank"
+                  rel="noopener"
+                  >View Project</a
+                >
+              </div>
+            </div>
+
+            <!-- Project Cards 5-->
+            <div class="project-card fade-in delay-4">
+              <div class="project-image">
+                <div class="project-image">
+                  <img
+                    src="images/Bisesh.webp"
+                    alt="Corporative Website"
+                    loading="lazy"
+                  />
+                </div>
+              </div>
+                <div class="project-content">
+                <h3>CV Website</h3>
+                <p>
+                    Professional CV website for showcasing skills, experience and achievements in a clean, modern layout.
+                </p>
+                <div class="project-tech">
+                  <span>Html</span>
+                  <span>CSS</span>
+                  <span>JS</span>
+                </div>
+                <a
+                  href="https://raipravat.github.io/Bisesh-Rai"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener"
                   >View Project</a
                 >
               </div>
@@ -256,6 +300,7 @@
               href="https://github.com/raipravat"
               class="link-card fade-in delay-2"
               target="_blank"
+              rel="noopener"
             >
               <div class="link-icon"><i class="fab fa-github"></i></div>
               <div class="link-content">
@@ -292,8 +337,7 @@
             <div class="cv-intro fade-in">
               <p class="passion-statement">
                 <i
-                  class="fas fa-graduation-cap"
-                  style="color: var(--primary-color)"
+                  class="fas fa-graduation-cap graduation-icon"
                 ></i>
                 I'm a YouTube-taught web designer who creates affordable sites.
                 By learning from free resources, I keep costs low without
@@ -491,37 +535,49 @@
                   href="https://t.me/raipravat101"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
+                  title="Telegram"
                   ><i class="fab fa-telegram"></i
                 ></a>
                 <a
                   href="https://x.com/mr_raipravat"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
+                  title="Twitter"
                   ><i class="fab fa-twitter"></i
                 ></a>
                 <a
                   href="https://linkedin.com/in/raipravat101"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
+                  title="LinkedIn"
                   ><i class="fab fa-linkedin"></i
                 ></a>
                 <a
                   href="https://github.com/raipravat"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
+                  title="GitHub"
                   ><i class="fab fa-github"></i
                 ></a>
                 <a
                   href="https://wa.me/9779842485969"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
                   aria-label="WhatsApp"
+                  title="WhatsApp"
                   ><i class="fab fa-whatsapp"></i
                 ></a>
                 <a
                   href="https://discord.com/users/raipravat101"
                   class="social-icon"
                   target="_blank"
+                  rel="noopener"
+                  title="Discord"
                   aria-label="Discord"
                   ><i class="fab fa-discord"></i
                 ></a>
@@ -554,7 +610,7 @@
     </div>
 
     <!-- Scroll to Top Button -->
-    <button class="scroll-to-top">
+    <button class="scroll-to-top" title="Scroll to top" aria-label="Scroll to top">
       <i class="fas fa-arrow-up"></i>
     </button>
 
