--- a/index.html
+++ b/index.html
@@ -97,14 +97,6 @@
                   aria-label="WhatsApp"
                   ><i class="fab fa-whatsapp"></i
                 ></a>
-                <a
-                  href="https://discord.com/users/raipravat101"
-                  class="social-icon"
-                  target="_blank"
-                  rel="noopener"
-                  aria-label="Discord"
-                  ><i class="fab fa-discord"></i
-                ></a>
               </div>
 
               <a href="#contact" class="cta-button fade-in delay-4">Hire Me</a>
@@ -129,11 +121,8 @@
       <section id="projects" class="section">
         <div class="container">
           <h2 class="section-title fade-in">My Projects</h2>
-          <div
-            class="projects-grid"
-          >
-          
-          <!-- Project Cards 1-->
+          <div class="projects-grid">
+            <!-- Project Cards 1-->
             <div class="project-card fade-in delay-1">
               <div class="project-image">
                 <img
@@ -228,7 +217,7 @@
                   />
                 </div>
               </div>
-                <div class="project-content">
+              <div class="project-content">
                 <h3>Portfolio Website</h3>
                 <p>
                   Clean, modern and user-friendly portfolio site—perfect for
@@ -260,10 +249,11 @@
                   />
                 </div>
               </div>
-                <div class="project-content">
+              <div class="project-content">
                 <h3>CV Website</h3>
                 <p>
-                    Professional CV website for showcasing skills, experience and achievements in a clean, modern layout.
+                  Professional CV website for showcasing skills, experience and
+                  achievements in a clean, modern layout.
                 </p>
                 <div class="project-tech">
                   <span>Html</span>
@@ -336,9 +326,7 @@
           <div class="cv-content">
             <div class="cv-intro fade-in">
               <p class="passion-statement">
-                <i
-                  class="fas fa-graduation-cap graduation-icon"
-                ></i>
+                <i class="fas fa-graduation-cap graduation-icon"></i>
                 I'm a YouTube-taught web designer who creates affordable sites.
                 By learning from free resources, I keep costs low without
                 compromising quality.
@@ -532,36 +520,36 @@
               </div>
               <div class="social-links">
                 <a
-                  href="https://t.me/raipravat101"
+                  href="https://github.com/raipravat"
                   class="social-icon"
                   target="_blank"
                   rel="noopener"
-                  title="Telegram"
-                  ><i class="fab fa-telegram"></i
-                ></a>
+                  aria-label="GitHub"
+                  ><i class="fab fa-github"></i>
+                </a>
                 <a
                   href="https://x.com/mr_raipravat"
                   class="social-icon"
                   target="_blank"
                   rel="noopener"
-                  title="Twitter"
-                  ><i class="fab fa-twitter"></i
-                ></a>
+                  aria-label="Twitter"
+                  ><i class="fab fa-twitter"></i>
+                </a>
                 <a
-                  href="https://linkedin.com/in/raipravat101"
+                  href="https://t.me/raipravat101"
                   class="social-icon"
                   target="_blank"
                   rel="noopener"
-                  title="LinkedIn"
+                  aria-label="Telegram"
+                  ><i class="fab fa-telegram"></i
+                ></a>
+                <a
+                  href="https://linkedin.com/in/raipravat101/"
+                  class="social-icon"
+                  target="_blank"
+                  rel="noopener"
+                  aria-label="LinkedIn"
                   ><i class="fab fa-linkedin"></i
-                ></a>
-                <a
-                  href="https://github.com/raipravat"
-                  class="social-icon"
-                  target="_blank"
-                  rel="noopener"
-                  title="GitHub"
-                  ><i class="fab fa-github"></i
                 ></a>
                 <a
                   href="https://wa.me/9779842485969"
@@ -569,17 +557,7 @@
                   target="_blank"
                   rel="noopener"
                   aria-label="WhatsApp"
-                  title="WhatsApp"
                   ><i class="fab fa-whatsapp"></i
-                ></a>
-                <a
-                  href="https://discord.com/users/raipravat101"
-                  class="social-icon"
-                  target="_blank"
-                  rel="noopener"
-                  title="Discord"
-                  aria-label="Discord"
-                  ><i class="fab fa-discord"></i
                 ></a>
               </div>
             </div>
@@ -610,7 +588,11 @@
     </div>
 
     <!-- Scroll to Top Button -->
-    <button class="scroll-to-top" title="Scroll to top" aria-label="Scroll to top">
+    <button
+      class="scroll-to-top"
+      title="Scroll to top"
+      aria-label="Scroll to top"
+    >
       <i class="fas fa-arrow-up"></i>
     </button>
 
