--- a/index.html
+++ b/index.html
@@ -606,8 +606,7 @@
       <div class="container">
         <div class="footer-content">
           <p class="copyright fade-in">
-            &copy; 2024 - <span id="year"></span>, www.Pravat.info.np, All
-            rights reserved.
+            &copy; 2024 - <span id="year"></span>, <a href="https://pravat.info.np" target="_blank" rel="noopener">www.Pravat.info.np.</a> All rights reserved.
           </p>
         </div>
       </div>
