--- a/index.html
+++ b/index.html
@@ -288,6 +288,34 @@
                 >
               </div>
             </div>
+              <!-- Project Cards 6-->
+            <div class="project-card fade-in delay-4">
+              <div class="project-image">
+              <img
+                src="images/insurance.webp"
+                alt="Insurance Agency Portal"
+                loading="lazy"
+              />
+              </div>
+              <div class="project-content">
+              <h3>Insurance Agency Portal</h3>
+              <p>
+                Modern portal for insurance agencies to manage clients, policies, and claims efficiently.
+              </p>
+              <div class="project-tech">
+                <span>HTML</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+              </div>
+              <a
+                href="https://raipravat.github.io/Insurance-Agency-Portal"
+                class="project-link"
+                target="_blank"
+                rel="noopener"
+                >View Project</a
+              >
+              </div>
+            </div>
           </div>
         </div>
       </section>
