--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
           </div>
         </div>
-        <div class="scroll-indicator">
+        <div class="scroll-indicator" id="scrollTrigger">
           <span class="scroll-text">Explore More</span>
           <div class="scroll-arrow"></div>
         </div>
@@ -308,7 +308,7 @@
                 <span>JavaScript</span>
               </div>
               <a
-                href="https://raipravat.github.io/Insurance-Agency-Portal"
+                href="http://live6.prabhat.info.np/"
                 class="project-link"
                 target="_blank"
                 rel="noopener"
