--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               <div class="testimonial-content">
                 <i class="fas fa-quote-left quote-icon"></i>
                 <p class="testimonial-text">
-                  Pravat designed a beautiful website for my small business that
+                  Prabhat designed a beautiful website for my small business that
                   exceeded all my expectations. His attention to detail and
                   quick turnaround time were impressive.
                 </p>
@@ -509,7 +509,7 @@
               <div class="testimonial-content">
                 <i class="fas fa-quote-left quote-icon"></i>
                 <p class="testimonial-text">
-                  Working with Pravat was a pleasure. He understood my vision
+                  Working with Prabhat was a pleasure. He understood my vision
                   and created a website that perfectly represents my brand.
                   Highly recommended!
                 </p>
@@ -532,7 +532,7 @@
                 <i class="fas fa-quote-left quote-icon"></i>
                 <p class="testimonial-text">
                   As a non-profit, we needed an affordable website solution.
-                  Pravat delivered an amazing site that's helped us reach more
+                  Prabhat delivered an amazing site that's helped us reach more
                   people than ever before.
                 </p>
                 <div class="testimonial-author">
@@ -657,8 +657,8 @@
         <div class="footer-content">
           <p class="copyright fade-in">
             &copy; 2024 - <span id="year"></span>,
-            <a href="https://pravat.info.np" target="_blank" rel="noopener"
-              >www.Pravat.info.np.</a
+            <a href="https://prabhat.info.np" target="_blank" rel="noopener"
+              >www.prabhat.info.np.</a
             >
             All rights reserved.
           </p>
