--- a/index.html
+++ b/index.html
@@ -288,32 +288,33 @@
                 >
               </div>
             </div>
-              <!-- Project Cards 6-->
+            <!-- Project Cards 6-->
             <div class="project-card fade-in delay-4">
               <div class="project-image">
-              <img
-                src="images/insurance.webp"
-                alt="Insurance Agency Portal"
-                loading="lazy"
-              />
+                <img
+                  src="images/insurance.webp"
+                  alt="Insurance Agency Portal"
+                  loading="lazy"
+                />
               </div>
               <div class="project-content">
-              <h3>Insurance Agency Portal</h3>
-              <p>
-                Modern portal for insurance agencies to manage clients, policies, and claims efficiently.
-              </p>
-              <div class="project-tech">
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>JavaScript</span>
-              </div>
-              <a
-                href="http://live6.prabhat.info.np/"
-                class="project-link"
-                target="_blank"
-                rel="noopener"
-                >View Project</a
-              >
+                <h3>Insurance Agency Portal</h3>
+                <p>
+                  Modern portal for insurance agencies to manage clients,
+                  policies, and claims efficiently.
+                </p>
+                <div class="project-tech">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
+                <a
+                  href="http://live6.prabhat.info.np/"
+                  class="project-link"
+                  target="_blank"
+                  rel="noopener"
+                  >View Project</a
+                >
               </div>
             </div>
           </div>
@@ -487,8 +488,8 @@
               <div class="testimonial-content">
                 <i class="fas fa-quote-left quote-icon"></i>
                 <p class="testimonial-text">
-                  Prabhat designed a beautiful website for my small business that
-                  exceeded all my expectations. His attention to detail and
+                  Prabhat designed a beautiful website for my small business
+                  that exceeded all my expectations. His attention to detail and
                   quick turnaround time were impressive.
                 </p>
                 <div class="testimonial-author">
@@ -642,15 +643,6 @@
       </section>
     </div>
 
-    <!-- Scroll to Top Button -->
-    <button
-      class="scroll-to-top"
-      title="Scroll to top"
-      aria-label="Scroll to top"
-    >
-      <i class="fas fa-arrow-up"></i>
-    </button>
-
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
@@ -665,6 +657,25 @@
         </div>
       </div>
     </footer>
+
+    <!-- Scroll to Top Button -->
+    <button
+      class="scroll-to-top"
+      title="Scroll to top"
+      aria-label="Scroll to top"
+    >
+      <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <!-- Current Section Indicator (dots) -->
+    <div class="current-section-indicator">
+      <a href="#home" class="active"></a>
+      <a href="#projects"></a>
+      <a href="#links"></a>
+      <a href="#Journey"></a>
+      <a href="#testimonials"></a>
+      <a href="#contact"></a>
+    </div>
 
     <script src="js/main.js"></script>
   </body>
