--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 </p>
                 <div class="testimonial-author">
                   <img
-                    src="https://randomuser.me/api/portraits/men/32.jpg"
+                    src="images/Testimonials/Rajan.png"
                     alt="Rajen Rai"
                     class="author-img"
                   />
