--- a/index.html
+++ b/index.html
@@ -578,12 +578,17 @@
               </div>
               <div class="info-item">
                 <i class="fas fa-phone"></i>
-                <span>+977 9842485969</span>
+                <span>+977-9842485969</span>
               </div>
               <div class="info-item">
                 <i class="fas fa-map-marker-alt"></i>
-                <span>Sunsari, Nepal</span>
+                <span>Koshi, Nepal</span>
               </div>
+               <div class="info-item">
+                <i class="fas fa-clock"></i>
+                <span>Everyday, 8pm-11pm</span>
+              </div>
+
               <div class="social-links">
                 <a
                   href="https://github.com/raipravat"
@@ -644,9 +649,11 @@
                   required
                 ></textarea>
               </div>
-              <button type="submit" class="submit-btn fade-in delay-5">
-                Send Message
-              </button>
+              <div class="button-wrapper">
+                <button type="submit" class="submit-btn fade-in delay-5">
+                  Send Message
+                </button>
+              </div>
             </form>
           </div>
         </div>
@@ -680,7 +687,7 @@
     <script src="js/main.js"></script>
     <script>
       // Set current year in footer
-      document.getElementById('year').textContent = new Date().getFullYear();
+      document.getElementById("year").textContent = new Date().getFullYear();
     </script>
   </body>
 </html>
