--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <li><a href="#projects" class="nav-link">Projects</a></li>
           <li><a href="#links" class="nav-link">Links</a></li>
           <li><a href="#Journey" class="nav-link">Journey</a></li>
-          <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
+          <li><a href="#testimonials" class="nav-link">Testimonias</a></li>
+          <li><a href="https://blogs.prabhat.info.np" class="nav-link">Blogs</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <div class="theme-toggle">
