--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <li><a href="#links" class="nav-link">Links</a></li>
           <li><a href="#Journey" class="nav-link">Journey</a></li>
           <li><a href="#testimonials" class="nav-link">Testimonias</a></li>
-          <li><a href="https://blogs.prabhat.info.np/" class="nav-link">Blogs</a></li>
+          <li>
+            <a href="https://blogs.prabhat.info.np/" class="nav-link">Blogs</a>
+          </li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <div class="theme-toggle">
@@ -58,7 +60,9 @@
             <div class="hero-content">
               <div class="hero-text-wrapper">
                 <p class="intro-text fade-in">Hello, my name is</p>
-                  <h1><span id="typed-text"></span><span class="cursor">|</span></h1>
+                <h1>
+                  <span id="typed-text"></span><span class="cursor">|</span>
+                </h1>
                 <h2 class="subtitle fade-in delay-1">
                   I craft digital experiences
                 </h2>
@@ -121,7 +125,7 @@
 
             <!-- Right Column - Profile and Preview -->
             <div class="hero-preview">
-              <div class="profile-container slide-in-right delay-2 ">
+              <div class="profile-container slide-in-right delay-2">
                 <div class="profile-frame">
                   <img
                     src="images/Profile.png"
@@ -432,6 +436,7 @@
                 <i class="fas fa-star"></i> What I Offer
               </h3>
               <div class="value-items">
+                
                 <!-- Affordable Advantage Column -->
                 <div class="value-item fade-in delay-2">
                   <div class="value-icon">
@@ -583,7 +588,7 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <span>Koshi, Nepal</span>
               </div>
-               <div class="info-item">
+              <div class="info-item">
                 <i class="fas fa-clock"></i>
                 <span>Everyday, 8pm-11pm</span>
               </div>
