--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#Journey" class="nav-link">Journey</a></li>
           <li><a href="#testimonials" class="nav-link">Testimonias</a></li>
           <li>
-            <a href="https://blogs.prabhat.info.np/" class="nav-link">Blogs</a>
+            <a href="https://blog.prabhat.info.np/" class="nav-link">Blogs</a>
           </li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
@@ -354,7 +354,7 @@
               </div>
               <div class="link-arrow"><i class="fas fa-chevron-right"></i></div>
             </a>
-            <a href="#" class="link-card fade-in delay-3" target="_blank">
+            <a href="https://blog.prabhat.info.np" class="link-card fade-in delay-3" target="_blank" rel="noopener">
               <div class="link-icon"><i class="fas fa-blog"></i></div>
               <div class="link-content">
                 <h3>Blog</h3>
