--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     <!-- Current Section Indicator (dots) -->
     <div class="current-section-indicator">
-      <a href="#home" class="active"></a>
-      <a href="#projects"></a>
-      <a href="#links"></a>
-      <a href="#Journey"></a>
-      <a href="#testimonials"></a>
-      <a href="#contact"></a>
+      <a href="#home" class="active" aria-label="home"></a>
+      <a href="#projects" aria-label="projects"></a>
+      <a href="#links" aria-label="link"></a>
+      <a href="#Journey" aria-label="Journey"></a>
+      <a href="#testimonials" aria-label="Testimonials"></a>
+      <a href="#contact" aria-label="contact"></a>
     </div>
 
     <!-- Main Content -->
