--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#Journey" class="nav-link">Journey</a></li>
           <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
           <li>
-            <a href="https://blog.prabhat.info.np/" target="_blank" class="nav-link">Blogs</a>
+            <a href="https://blog.prabhat.info.np/" target="_blank" rel="noopener" class="nav-link">Blogs</a>
           </li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
@@ -297,16 +297,15 @@
             <div class="project-card fade-in delay-4">
               <div class="project-image">
                 <img
-                  src="images/insurance.webp"
+                  src="images/Bima.webp"
                   alt="Insurance Agency Portal"
                   loading="lazy"
                 />
               </div>
               <div class="project-content">
-                <h3>Insurance Agency Portal</h3>
+                <h3>Insurance Website</h3>
                 <p>
-                  Modern portal for insurance agencies to manage clients,
-                  policies, and claims efficiently.
+                  A modern website designed for insurance companies to showcase services, engage clients, and streamline policy management online.
                 </p>
                 <div class="project-tech">
                   <span>HTML</span>
@@ -314,7 +313,7 @@
                   <span>JavaScript</span>
                 </div>
                 <a
-                  href="http://live6.prabhat.info.np/"
+                  href="http://live7.prabhat.info.np/"
                   class="project-link"
                   target="_blank"
                   rel="noopener"
