--- a/index.html
+++ b/index.html
@@ -618,29 +618,25 @@
                 ></a>
               </div>
             </div>
-            <form class="contact-form slide-in-right delay-1">
-              <div class="form-group fade-in delay-2">
-                <input type="text" placeholder="Your Name" required />
-              </div>
-              <div class="form-group fade-in delay-3">
-                <input type="email" placeholder="Your Email" required />
-              </div>
-              <div class="form-group fade-in delay-4">
-                <input type="text" placeholder="Subject" />
-              </div>
-              <div class="form-group fade-in delay-5">
-                <textarea
-                  placeholder="Your Message"
-                  rows="5"
-                  required
-                ></textarea>
-              </div>
-              <div class="button-wrapper">
-                <button type="submit" class="submit-btn fade-in delay-5">
-                  Send Message
-                </button>
-              </div>
-            </form>
+         <form class="contact-form slide-in-right delay-1" id="contactForm">
+  <div class="form-group fade-in delay-2">
+    <input type="text" id="name" placeholder="Your Name" required />
+  </div>
+  <div class="form-group fade-in delay-3">
+    <input type="email" id="email" placeholder="Your Email" required />
+  </div>
+  <div class="form-group fade-in delay-4">
+    <input type="text" id="subject" placeholder="Subject" />
+  </div>
+  <div class="form-group fade-in delay-5">
+    <textarea id="message" placeholder="Your Message" rows="5" required></textarea>
+  </div>
+  <div class="button-wrapper">
+    <button type="submit" class="submit-btn fade-in delay-5">
+      Send Message
+    </button>
+  </div>
+</form>
           </div>
         </div>
       </section>
@@ -674,6 +670,36 @@
     <script>
       // Set current year in footer
       document.getElementById("year").textContent = new Date().getFullYear();
+
+      // Massage submit code to google Sheet
+        const form = document.getElementById("contactForm");
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+
+    const data = {
+      name: document.getElementById("name").value,
+      email: document.getElementById("email").value,
+      subject: document.getElementById("subject").value,
+      message: document.getElementById("message").value
+    };
+
+    fetch("https://script.google.com/macros/s/AKfycbxDEKyA-dN6HIkyK934lOE_Me-8V8S9sKiD-fjz21c_qamQfd1nUjyvbHSdEemUpUX9PQ/exec", {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: {
+        "Content-Type": "application/json"
+      }
+    })
+    .then(res => res.json())
+    .then(response => {
+      alert("Message sent successfully!");
+      form.reset();
+    })
+    .catch(error => {
+      alert("There was an error. Try again later.");
+      console.error(error);
+    });
+  });
     </script>
   </body>
 </html>
