--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
           <li><a href="#Journey" class="nav-link">Journey</a></li>
           <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
           <li>
-            <a href="https://blog.prabhat.info.np/" target="_blank" rel="noopener" class="nav-link">Blogs</a>
+            <a
+              href="https://blog.prabhat.info.np/"
+              target="_blank"
+              rel="noopener"
+              class="nav-link"
+              >Blogs</a
+            >
           </li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
@@ -305,7 +311,9 @@
               <div class="project-content">
                 <h3>Insurance Website</h3>
                 <p>
-                  A modern website designed for insurance companies to showcase services, engage clients, and streamline policy management online.
+                  A modern website designed for insurance companies to showcase
+                  services, engage clients, and streamline policy management
+                  online.
                 </p>
                 <div class="project-tech">
                   <span>HTML</span>
@@ -353,7 +361,13 @@
               </div>
               <div class="link-arrow"><i class="fas fa-chevron-right"></i></div>
             </a>
-            <a href="https://blog.prabhat.info.np" target="_blank" class="link-card fade-in delay-3" target="_blank" rel="noopener">
+            <a
+              href="https://blog.prabhat.info.np"
+              target="_blank"
+              class="link-card fade-in delay-3"
+              target="_blank"
+              rel="noopener"
+            >
               <div class="link-icon"><i class="fas fa-blog"></i></div>
               <div class="link-content">
                 <h3>Blog</h3>
@@ -618,25 +632,35 @@
                 ></a>
               </div>
             </div>
-         <form class="contact-form slide-in-right delay-1" id="contactForm">
-  <div class="form-group fade-in delay-2">
-    <input type="text" id="name" placeholder="Your Name" required />
-  </div>
-  <div class="form-group fade-in delay-3">
-    <input type="email" id="email" placeholder="Your Email" required />
-  </div>
-  <div class="form-group fade-in delay-4">
-    <input type="text" id="subject" placeholder="Subject" />
-  </div>
-  <div class="form-group fade-in delay-5">
-    <textarea id="message" placeholder="Your Message" rows="5" required></textarea>
-  </div>
-  <div class="button-wrapper">
-    <button type="submit" class="submit-btn fade-in delay-5">
-      Send Message
-    </button>
-  </div>
-</form>
+            <form class="contact-form slide-in-right delay-1" id="contactForm">
+              <div class="form-group fade-in delay-2">
+                <input type="text" id="name" placeholder="Your Name" required />
+              </div>
+              <div class="form-group fade-in delay-3">
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="Your Email"
+                  required
+                />
+              </div>
+              <div class="form-group fade-in delay-4">
+                <input type="text" id="subject" placeholder="Subject" />
+              </div>
+              <div class="form-group fade-in delay-5">
+                <textarea
+                  id="message"
+                  placeholder="Your Message"
+                  rows="5"
+                  required
+                ></textarea>
+              </div>
+              <div class="button-wrapper">
+                <button type="submit" class="submit-btn fade-in delay-5">
+                  Send Message
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </section>
@@ -667,39 +691,5 @@
     </button>
 
     <script src="js/main.js"></script>
-    <script>
-      // Set current year in footer
-      document.getElementById("year").textContent = new Date().getFullYear();
-
-      // Massage submit code to google Sheet
-        const form = document.getElementById("contactForm");
-  form.addEventListener("submit", function (e) {
-    e.preventDefault();
-
-    const data = {
-      name: document.getElementById("name").value,
-      email: document.getElementById("email").value,
-      subject: document.getElementById("subject").value,
-      message: document.getElementById("message").value
-    };
-
-    fetch("https://script.google.com/macros/s/AKfycbxDEKyA-dN6HIkyK934lOE_Me-8V8S9sKiD-fjz21c_qamQfd1nUjyvbHSdEemUpUX9PQ/exec", {
-      method: "POST",
-      body: JSON.stringify(data),
-      headers: {
-        "Content-Type": "application/json"
-      }
-    })
-    .then(res => res.json())
-    .then(response => {
-      alert("Message sent successfully!");
-      form.reset();
-    })
-    .catch(error => {
-      alert("There was an error. Try again later.");
-      console.error(error);
-    });
-  });
-    </script>
   </body>
 </html>
