--- a/index.html
+++ b/index.html
@@ -665,12 +665,13 @@
                   required
                 ></textarea>
               </div>
-              
               <!-- Add reCAPTCHA widget -->
-              <div
-                class="g-recaptcha"
-                data-sitekey="6Lcnc5MrAAAAACkF0iFyq5TvMLfYTk_rU49l5qQ4"
-              ></div>
+              <div class="recaptcha-container">
+                <div
+                  class="g-recaptcha"
+                  data-sitekey="6Lcnc5MrAAAAACkF0iFyq5TvMLfYTk_rU49l5qQ4"
+                ></div>
+              </div>
               <div class="button-wrapper">
                 <button type="submit" class="submit-btn fade-in delay-5">
                   Send Message
